# FastAPI-template

./: .env  .gitignore  README.md  pyproject.toml
app/: cli.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  dummy.py  files.py  users.py
app/core/: config.py  security.py
app/db/: __init__.py  session.py
app/models/: __init__.py  role.py  role_api.py  user.py
app/schemas/: __init__.py  auth.py  role.py  user.py
app/services/: email.py  storage.py
keys/: private_key.pem  public_key.pem
